k8s/authelia/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: authelia
          image: authelia/authelia:latest
          securityContext:
            runAsUser: 2000
            runAsGroup: 2000
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /config/db.sqlite3
              subPath: db.sqlite3
            - name: notifications
              mountPath: /config/notification.txt
              subPath: notification.txt
      volumes:
        - name: config-src
          configMap:
            name: authelia-config
        - name: config
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: authelia-data
        - name: notifications
          persistentVolumeClaim:
            claimName: authelia-notifications
