k8s/authelia/ingress.yml
# Ingress protegido por Traefik
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: auth.reyops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia-service
                port:
                  number: 9091
